# CFTC_scrape

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  start.sh
.streamlit/: config.toml
alembic/: env.py
cftc_pipeline/: __init__.py  cli.py  config.py  storage.py
cftc_pipeline/analysis/: llm_analyzer.py  schemas.py
cftc_pipeline/analysis/prompts/: v1_extraction.py
cftc_pipeline/clustering/: theme_clusterer.py
cftc_pipeline/db/: __init__.py  models.py  session.py
cftc_pipeline/dedup/: deduplicator.py
cftc_pipeline/extraction/: docx_extractor.py  html_extractor.py  pdf_extractor.py  text_cleaner.py
cftc_pipeline/pipeline/: runner.py  stages.py
cftc_pipeline/ranking/: ranker.py
cftc_pipeline/report/: generator.py
cftc_pipeline/report/templates/: report.md.j2
cftc_pipeline/scraper/: attachment_downloader.py  cftc_scraper.py  http_client.py
cftc_pipeline/ui/: streamlit_app.py
tests/: test_cli_db_url.py  test_config_auth.py  test_dedup.py  test_extraction.py  test_http_client.py  test_ranking.py  test_schemas.py  test_scraper.py
